<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProdukActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/produk"
                android:scaleType="fitXY"
                android:contentDescription="@string/todo"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nama_produk"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_harga_produk"
            android:textColor="@color/colorRed"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/star_full"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/star_full"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/star_full"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/star_full"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/star_half"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_count"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buy"
                android:layout_marginStart="8dp"
                android:textSize="13sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_produk"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/stok_name" />
                <TextView
                    android:id="@+id/stok_value"
                    style="@style/TextSpec.Value" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/merek_name" />
                <TextView
                    android:id="@+id/merek_value"
                    style="@style/TextSpec.Value" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/from_name" />
                <TextView
                    android:id="@+id/from_value"
                    style="@style/TextSpec.Value" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/where_name" />
                <TextView
                    android:id="@+id/where_value"
                    style="@style/TextSpec.Value" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_produk"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_value1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_value2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_value3"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:background="@color/colorBlueSky"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:ignore="RtlSymmetry" />
            <Button
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_buy"
                android:textSize="12sp"
                android:background="@color/colorOren"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>